--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,3 +1,5 @@
-<footer class="mt-5 bg-light py-5 text-center">
-    <p>Copyright Guillaume.R</p>
+<footer class="position-relative bottom-0 start-0 mt-5 bg-dark py-5 text-center">
+    <div class="container">
+    <span class="text-muted">Copyright Guillaume RORIVE</span>
+    </div>
 </footer>
