--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,6 @@
         {% block body %}{% endblock %}
         
         
-        {# {% include 'partials/footer.html.twig' %} #}
+        {% include 'partials/footer.html.twig' %}
     </body>
 </html>
