--- a/templates/cart/cart.html.twig
+++ b/templates/cart/cart.html.twig
@@ -2,51 +2,63 @@
 
 {% block body %}
     <div class="container mt-4">
-    
-        {% set totalPrice = 0 %}
-        {% for productInfo in products %}
-            {% set product = productInfo.product %}
-            {% set productPrice = productInfo.qty * product.price  %}
-            {% set totalPrice = totalPrice + productPrice  %}
 
-            <div class="row justify-content-between mt-5 mb-5 border border-warning border-5 rounded p-3">
-                <div class="col-4">
-                    <img src="{{product.img}}" alt="photo de {{product.name}}">
-                </div>
-                <div class="col-7">
-                    <div class="row h-100 justify-content-center">
-                        <div class="col-5"><h4>{{product.name}}</h4></div>
+        
+        {% if products is empty %}
 
-                        <div class="col-12 align-self-center">
-                            <div class="row justify-content-between">
-                                <div class="col-8">Vous avez {{productInfo.qty}} {{product.name}} dans votre panier ! </div>
-                                <div class="col-2">{{ productPrice }}€</div>
+            <div class="alert alert-danger" role="alert">
+                <h2 class="alert-heading">Votre panier est vide !</h2>
+                <hr>
+                <p>Vous devez ajouter des produits avant de pouvoir valider un panier !</p>
+            </div>
+
+        
+        {% else %}
+            {% for productInfo in products %}
+                {% set product = productInfo.product %}
+                {% set productPrice = productInfo.qty * product.price  %}
+                
+
+                <div class="row justify-content-between mt-5 mb-5 border border-warning border-5 rounded p-3">
+                    <div class="col-4">
+                        <img src="{{product.img}}" alt="photo de {{product.name}}">
+                    </div>
+                    <div class="col-7">
+                        <div class="row h-100 justify-content-center">
+                            <div class="col-5"><h4>{{product.name}}</h4></div>
+
+                            <div class="col-12 align-self-center">
+                                <div class="row justify-content-between">
+                                    <div class="col-8">Vous avez {{productInfo.qty}} {{product.name}} dans votre panier ! </div>
+                                    <div class="col-2">{{ productPrice }}€</div>
+                                </div>
+                            
                             </div>
                         
-                        </div>
-                    
-                    
-                        <div class="col-12 align-self-end">
-                            <div class="row justify-content-between">
-                                <div class="col-5"><a class="btn btn-primary" href="{{path('addOneProduct', {'id':product.id})}}">En commander un autre</a></div>
-                                <div class="col-5"><a class="btn btn-danger" href="{{path('deleteProduct', {'id':product.id})}}">Supprimer ce produit du panier</a></div>
+                        
+                            <div class="col-12 align-self-end">
+                                <div class="row justify-content-between">
+                                    <div class="col-5"><a class="btn btn-primary" href="{{path('addOneProduct', {'id':product.id})}}">En commander un autre</a></div>
+                                    <div class="col-5"><a class="btn btn-danger" href="{{path('deleteProduct', {'id':product.id})}}">Supprimer ce produit du panier</a></div>
+                                </div>
                             </div>
+
                         </div>
-
+                        
                     </div>
-                    
                 </div>
-            </div>
-            
-        {% endfor %}   
+                
+            {% endfor %}   
 
-        <div class="row justify-content-between">
-            <div class="col-4">
-                <h2>Prix total du panier : {{ totalPrice }} €</h2>
-            </div>
-            <div class="col-4">
-                <a class=" btn btn-success " href="{{path('emptyCart',{'price':totalPrice})}}">Vider le panier !</a>
-            </div>
-        </div>     
-    </div>
+            <div class="row justify-content-between">
+                <div class="col-4">
+                    <h2>Prix total du panier : {{ totalPrice }} €</h2>
+                </div>
+                <div class="col-4">
+                    <a class=" btn btn-success " href="{{path('emptyCart',{'price':totalPrice})}}">Vider le panier !</a>
+                </div>
+            </div>     
+        </div>
+
+    {% endif %}
 {% endblock %}
