--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="row mt-5">
             {% for product in products %}
-                <div class="col-3 mt-4 mb-4 d-flex justify-content-center ">
+                <div class="col-3 mt-4 mb-4 d-flex justify-content-center product">
                     <div class="card" style="width: 22rem;">
                         <img src="{{ product.img }}" class="card-img-top" alt="image de {{ product.name }}">
                         <div class="card-body">
